--- a/docs/sources/release-notes/v1-2.md
+++ b/docs/sources/release-notes/v1-2.md
@@ -20,9 +20,41 @@ We've invested substantial effort in optimizing the read path and refining query
 Trace to profiles integrations
 ![image](https://github.com/grafana/pyroscope/assets/23323466/d10bfb66-a40f-4b35-9f24-d2ec515b68c6)
 
-Notable changes are listed below for more details check out the **Full Changelog**: https://github.com/grafana/pyroscope/compare/v1.1.5...v1.2.0
+Notable changes are listed below for more details check out the **Full 1.2.0 Changelog**: https://github.com/grafana/pyroscope/compare/v1.1.5...v1.2.0
 
-## Enhancements
+Version 1.2.x changelogs:
+
+* [Version 1.2.1](https://github.com/grafana/pyroscope/releases/tag/v1.2.1)
+* [Version 1.2.0](https://github.com/grafana/pyroscope/releases/tag/v1.2.0)
+
+## Features and enhancements
+
+All new features and enhancements for version 1.2.x are listed in this section.
+
+### Version 1.2.1
+
+Features and enhancements for version 1.2.1:
+
+* Add a way to control the aggregation type for the SelectSeries API ([#2758](https://github.com/grafana/pyroscope/pull/2758))
+* Add admin module serving the bucket web tool ([#2724](https://github.com/grafana/pyroscope/pull/2724))
+* Add block compaction level to bucket index ([#2721](https://github.com/grafana/pyroscope/pull/2721))
+* Introduce the first release of the Cluster API Versioning ([#2780](https://github.com/grafana/pyroscope/pull/2780))
+* Implement Settings API ([#2711](https://github.com/grafana/pyroscope/pull/2711))
+* Develop optimized pprof symbolication and pprof truncation ([#2679](https://github.com/grafana/pyroscope/pull/2679), [#2754](https://github.com/grafana/pyroscope/pull/2754))
+* Add the first iteration of the blocks viewer cli tool ([#2697](https://github.com/grafana/pyroscope/pull/2697))
+
+In addition, the followin improvements and updates for version 1.2.1:
+
+* Improve `SelectMatchingProfiles` performance ([#2734](https://github.com/grafana/pyroscope/pull/2734))
+* Enhance language detection performance ([#2823](https://github.com/grafana/pyroscope/pull/2823))
+* Refactor Azure bucket configs ([#2742](https://github.com/grafana/pyroscope/pull/2742))
+* Update various dependencies and libraries ([#2741](https://github.com/grafana/pyroscope/pull/2741), [#2744](https://github.com/grafana/pyroscope/pull/2744), [#2826](https://github.com/grafana/pyroscope/pull/2826), [#2827](https://github.com/grafana/pyroscope/pull/2827), [#2832](https://github.com/grafana/pyroscope/pull/2832))
+* Switch to relative links in block viewer to address issue with alternate base URLs ([#2763](https://github.com/grafana/pyroscope/pull/2763))
+* Update styling to match Grafana ([#2827](https://github.com/grafana/pyroscope/pull/2827))
+
+### Version 1.2
+
+Enhancements for version 1.2:
 
 * <code>[728493e](https://github.com/grafana/pyroscope/commit/728493ecee94b181a53e4dd6eaada4bc16e772b2)</code> feat: Scalable Compactor ([#2466](https://github.com/grafana/pyroscope/pull/2466))
 * <code>[d4e3b03](https://github.com/grafana/pyroscope/commit/d4e3b0326e24e2dc0e8730cd355753650c023f3a)</code> Create a physical plan for block querying ([#2586](https://github.com/grafana/pyroscope/pull/2586))
@@ -35,11 +67,37 @@ Notable changes are listed below for more details check out the **Full Changelog
 
 ## Bug fixes
 
+### Version 1.2.1
+
+* Fix duplicate @emotion/react import and favicon ([#2798](https://github.com/grafana/pyroscope/pull/2798))
+* Resolve query split logic issues for LabelNames, LabelValues, and ProfileTypes ([#2852](https://github.com/grafana/pyroscope/pull/2852))
+* Rename Phlare to Pyroscope ([#2722](https://github.com/grafana/pyroscope/pull/2722))
+* Fix span name for BlockSelect from store-gateway ([#2842](https://github.com/grafana/pyroscope/pull/2842))
+* Address issues in version merging in memberlist ([#2815](https://github.com/grafana/pyroscope/pull/2815))
+* Correct handling of overriding extraArgs in components ([#2751](https://github.com/grafana/pyroscope/pull/2751))
+* Remove go.mod replace for golang.org/x/exp ([#2848](https://github.com/grafana/pyroscope/pull/2848))
+* Remove parquet page file buffer in symbdb ([#2820](https://github.com/grafana/pyroscope/pull/2820))
+* Fix various issues in ebpf, ReduxQuerySync, and UI units ([#2703](https://github.com/grafana/pyroscope/pull/2703), [#2761](https://github.com/grafana/pyroscope/pull/2761), [#2778](https://github.com/grafana/pyroscope/pull/2778), [#2788](https://github.com/grafana/pyroscope/pull/2788), [#2789](https://github.com/grafana/pyroscope/pull/2789), [#2812](https://github.com/grafana/pyroscope/pull/2812), [#2838](https://github.com/grafana/pyroscope/pull/2838))
+* Fix ingress for Pyroscope UI ([#2807](https://github.com/grafana/pyroscope/pull/2807))
+
+### Version 1.2
+
 * <code>[e572d26](https://github.com/grafana/pyroscope/commit/e572d26d1b3580b1c5c2a6e2c72cc20041f1e73e)</code> Cleanup failed segment before flushing. ([#2606](https://github.com/grafana/pyroscope/pull/2606))
 * <code>[be7bc5d](https://github.com/grafana/pyroscope/commit/be7bc5d96399a344324a229f42d8838103cf8bf7)</code> Fix symbols resolver race condition ([#2665](https://github.com/grafana/pyroscope/pull/2665))
 * <code>[f4b0a60](https://github.com/grafana/pyroscope/commit/f4b0a607fa93d9061a330ac358f475bec7b12038)</code> fix(jfr): merge equal samples ([#2652](https://github.com/grafana/pyroscope/pull/2652))
 
 ## Documentation updates
+
+### Version 1.2.1
+
+* Add initial docs for the /pyroscope/render API endpoint ([#2837](https://github.com/grafana/pyroscope/pull/2837))
+* Create "Ingest and analyze profile data" section in docs ([#2828](https://github.com/grafana/pyroscope/pull/2828))
+* Add upgrade from standard pprof example ([#2829](https://github.com/grafana/pyroscope/pull/2829))
+* Add compactor to docs ([#2720](https://github.com/grafana/pyroscope/pull/2720))
+* Migrate from Standard pprof to Pyroscope for Continuous Profiling ([#2830](https://github.com/grafana/pyroscope/pull/2830))
+* Add introductory material and how to use Pyroscope pages ([#2834](https://github.com/grafana/pyroscope/pull/2834), [#2836](https://github.com/grafana/pyroscope/pull/2836), [#2839](https://github.com/grafana/pyroscope/pull/2839))
+
+### Version 1.2
 
 - We've added documentation for `profilecli` to query and upload pprof files.
 - We've also documented the store-gateway and compactor component.
