Add 1.3 release notes for docs

--- a/docs/sources/release-notes/v1-2.md
+++ b/docs/sources/release-notes/v1-2.md
@@ -20,7 +20,7 @@ We've invested substantial effort in optimizing the read path and refining query
 Trace to profiles integrations
 ![image](https://github.com/grafana/pyroscope/assets/23323466/d10bfb66-a40f-4b35-9f24-d2ec515b68c6)
 
-Notable changes are listed below for more details check out the **Full 1.2.0 Changelog**: https://github.com/grafana/pyroscope/compare/v1.1.5...v1.2.0
+Notable changes are listed below. For more details, check out the **Full 1.2.0 Changelog**: https://github.com/grafana/pyroscope/compare/v1.1.5...v1.2.0
 
 Version 1.2.x changelogs:
 
@@ -29,7 +29,7 @@ Version 1.2.x changelogs:
 
 ## Features and enhancements
 
-All new features and enhancements for version 1.2.x are listed in this section.
+This section lists all new features and enhancements for version 1.2.x.
 
 ### Version 1.2.1
 
@@ -43,7 +43,7 @@ Features and enhancements for version 1.2.1:
 * Develop optimized pprof symbolication and pprof truncation ([#2679](https://github.com/grafana/pyroscope/pull/2679), [#2754](https://github.com/grafana/pyroscope/pull/2754))
 * Add the first iteration of the blocks viewer cli tool ([#2697](https://github.com/grafana/pyroscope/pull/2697))
 
-In addition, the followin improvements and updates for version 1.2.1:
+In addition, the following improvements and updates for version 1.2.1:
 
 * Improve `SelectMatchingProfiles` performance ([#2734](https://github.com/grafana/pyroscope/pull/2734))
 * Enhance language detection performance ([#2823](https://github.com/grafana/pyroscope/pull/2823))
