--- a/docs/sources/release-notes/v1-4.md
+++ b/docs/sources/release-notes/v1-4.md
@@ -25,7 +25,7 @@ Features and enhancements for version 1.4 include:
 
 * Adhoc profiles API (#2963)
 * Add query-tracer to profilecli ([#2966](https://github.com/grafana/pyroscope/pull/2966))
-* Add ServiceMonitor support to helm chart ([#2944](https://github.com/grafana/pyroscope/pull/2944), [#2929](https://github.com/grafana/pyroscope/pull/2929), [#2967](https://github.com/grafana/pyroscope/pull/2967))
+* Add ServiceMonitor support to Helm chart ([#2944](https://github.com/grafana/pyroscope/pull/2944), [#2929](https://github.com/grafana/pyroscope/pull/2929), [#2967](https://github.com/grafana/pyroscope/pull/2967))
 * Scope time series to flamegraph node API ([#2961](https://github.com/grafana/pyroscope/pull/2961))
 
 ### Improvements and updates
