--- a/docs/sources/release-notes/v1-4.md
+++ b/docs/sources/release-notes/v1-4.md
@@ -15,7 +15,7 @@ This release includes several new features will are precursors to larger project
 * Time series scoped to a flamegraph function
 * Traces to profiles tooling
 
-Additionally, there has been a multitude of smaller changes to improve stability, performance, and documentation.
+Additionally, numerous other changes improve stability, performance, and documentation.
 
 Notable changes are listed below. For more details, check out the Full 1.4.0 Changelog: https://github.com/grafana/pyroscope/compare/v1.3.0...v1.4.0.
 
