chore: remove repetitive words
Signed-off-by: sunxunle <sunxunle@gmail.com>

--- a/docs/sources/release-notes/v1-1.md
+++ b/docs/sources/release-notes/v1-1.md
@@ -7,7 +7,7 @@ weight: 850
 
 # Version 1.1 release notes
 
-The Pyroscope team is excited to announce the the second release. This release allows to retrieve series from persistent storages like local disk and object store and also has a couple of performance improvements (e.g., JFR ingestion is handled a lot more efficiently).
+The Pyroscope team is excited to announce the second release. This release allows to retrieve series from persistent storages like local disk and object store and also has a couple of performance improvements (e.g., JFR ingestion is handled a lot more efficiently).
 
 As always, feedback is more than welcome, feel free to open issues/discussions.
 You can reach out to the team using:
