Add release notes for v1.5

--- a/docs/sources/release-notes/v1-4.md
+++ b/docs/sources/release-notes/v1-4.md
@@ -2,14 +2,14 @@
 title: Version 1.4 release notes
 menuTitle: V1.4
 description: Release notes for Grafana Pyroscope 1.4
-weight: 750
+weight: 700
 ---
 
 # Version 1.4 release notes
 
 We are excited to present Grafana Pyroscope 1.4.
 
-This release includes several new features will are precursors to larger projects like:
+This release includes several new features which are precursors to larger projects like:
 
 * Adhoc profiling
 * Time series scoped to a flamegraph function
@@ -23,7 +23,7 @@ Notable changes are listed below. For more details, check out the Full 1.4.0 Cha
 
 Features and enhancements for version 1.4 include:
 
-* Adhoc profiles API (#2963)
+* Adhoc profiles API ([#2963](https://github.com/grafana/pyroscope/pull/2963))
 * Add query-tracer to profilecli ([#2966](https://github.com/grafana/pyroscope/pull/2966))
 * Add ServiceMonitor support to Helm chart ([#2944](https://github.com/grafana/pyroscope/pull/2944), [#2929](https://github.com/grafana/pyroscope/pull/2929), [#2967](https://github.com/grafana/pyroscope/pull/2967))
 * Scope time series to flamegraph node API ([#2961](https://github.com/grafana/pyroscope/pull/2961))
