--- a/docs/sources/release-notes/v1-5.md
+++ b/docs/sources/release-notes/v1-5.md
@@ -9,7 +9,7 @@ weight: 650
 
 We are excited to present Grafana Pyroscope 1.5.
 
-This release includes our brand new and experimental Github integration, as well as numerous changes that improve stability, performance, and documentation.
+This release includes our brand new and experimental Github integration, as well numerous stability, performance, and documentation improvements.
 
 Notable changes are listed below. For more details, check out the Full 1.5.0 Changelog: https://github.com/grafana/pyroscope/compare/v1.4.0...v1.5.0.
 
