--- a/docs/sources/release-notes/v1-5.md
+++ b/docs/sources/release-notes/v1-5.md
@@ -9,7 +9,7 @@ weight: 650
 
 We are excited to present Grafana Pyroscope 1.5.
 
-This release includes our brand new and experimental Github integration, as well numerous stability, performance, and documentation improvements.
+This release focuses on improving stability and interoperability to make Pyroscope more reliable and easier to use.
 
 Notable changes are listed below. For more details, check out the Full 1.5.0 Changelog: https://github.com/grafana/pyroscope/compare/v1.4.0...v1.5.0.
 
@@ -17,7 +17,6 @@ Notable changes are listed below. For more details, check out the Full 1.5.0 Cha
 
 Features and enhancements for version 1.5 include:
 
-* Experimental: Adds integration with GitHub to fetch profiled code ([#2965](https://github.com/grafana/pyroscope/pull/2965))
 * Repair Go stack traces ([#3014](https://github.com/grafana/pyroscope/pull/3014))
 * Profile stats API ([#3090](https://github.com/grafana/pyroscope/pull/3090))
 
@@ -50,4 +49,3 @@ Version 1.5 includes the following documentation updates:
 * Reorganize examples folder to match documentation structure ([#3026](https://github.com/grafana/pyroscope/pull/3026))
 * Update Configure the client and span profiles doc ([#3028](https://github.com/grafana/pyroscope/pull//3028))
 * Improve intro and span profiles docs ([#3089](https://github.com/grafana/pyroscope/pull/3089), [#3099](https://github.com/grafana/pyroscope/pull/3099))
-* Update make docs procedure ([#2994](https://github.com/grafana/pyroscope/pull/2994), [#3011](https://github.com/grafana/pyroscope/pull/3011), [#3059](https://github.com/grafana/pyroscope/pull/3059))
